[SubscriberService] use getFirst instead of get(0)